# hello-world-cli

./: README.md  pyproject.toml
hello_world_cli/: main.py
tests/: test_main.py
